additional outputs that are issued per epoch

--- a/src/DataMining.ipynb
+++ b/src/DataMining.ipynb
@@ -1377,6 +1377,130 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qEZLo_lI6xub",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b5a84d1-9b86-4281-d383-27fb5d22b3ad"
+      },
+      "source": [
+        "losses[2,1:1000]"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1000-element Array{Float64,1}:\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              "   ⋮\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN\n",
+              " NaN"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RsaXA6GO7IIC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8e011a03-cbf2-4d79-c9ba-a19769cba4ff"
+      },
+      "source": [
+        "CUDA.memory_status() "
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Effective GPU memory usage: 99.98% (14.752 GiB/14.756 GiB)\n",
+            "CUDA allocator usage: 14.321 GiB\n",
+            "binned usage: 14.321 GiB (8.010 GiB allocated, 6.311 GiB cached)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vYYMRypOYXIT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "695ea341-c6a9-4032-8900-a2b7c9be5be7"
+      },
+      "source": [
+        "for epoch ∈ 1:epochs\n",
+        "    @show epoch\n",
+        "    @show mean(losses[epoch,:])\n",
+        "  end"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "epoch = 1\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 2\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 3\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 4\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 5\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 6\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 7\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 8\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 9\n",
+            "mean(losses[epoch, :]) = NaN\n",
+            "epoch = 10\n",
+            "mean(losses[epoch, :]) = NaN\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
