Transfer 'influences of ...' into new structure

--- a/bericht/sections/experiments.tex
+++ b/bericht/sections/experiments.tex
@@ -20,6 +20,19 @@ Nevertheless, both task types will use a dropout of 0.1, cross-entropy for loss,
 To ensure that these individual areas function correctly and that errors have not already sneaked in here. There are several outputs that show the functionality in a small scale and can ideally catch some errors. These outputs can be found in the Jupyter Notebook under Tests. In this section, the first record and the corresponding label of the training dataset are displayed first. The same is repeated for the test data set. After these examples, a dry run of the tokenizer follows. This is to assure us that the tokenize function, which puts the data into a form that the transformer can read, is working correctly. This is shown with a sentence that leads to the same result both by hand and by the function.  Next, the tokenization of special tokens is examined. This is to guarantee that the special tokens needed for the NER task are correctly recognized and translated. This is followed by some examples that test the functionality of the loss function and the embedding of the previously translated sentence. At this point, however, the verification of correctness becomes difficult, since the interpretation of the representation of the CLS token is no longer directly evaluable for humans. Although it can be shown that this process functions and presumably also operates correctly, this example no longer guarantees this.  This is followed by the tests that refer to the evaluation, in other words to the F1 score.Here we first consider whether the formats have been converted correctly so that the Metric package which is used for the calculation can read them and then we briefly compare whether the example delivers the expected F1 score. 
 
 \section{Hardware requirements}
+In this section, we will take a brief look at the usability of different hardware platforms for creating transformer models and training or testing them. More specifically, we will compare the google-colab environment with an Nvidia GPU and an AMD GPU. Due to the randomness of the hardware assignment on the google-colab page, I cannot define in more detail which GPU was used on this platform. The Nvidia GPU that was used was a GeForce 940MX with about 2 GB of VRAM, and the AMD GPU on the other side was an RX580 with about 8 GB of VRAM. 
+
+At this point I would like to briefly describe the extent to which AMD's ROCM stack is usable, because surprisingly I was able to define the model and make predictions with it in a newly created state. Unfortunately, due to instabilities in the ROCM stack after an update that must have broken some internal dependencies that the kernel and ROCM driver must have relied on, the Linux kernel could no longer use the GPU, and so the video output of the computer was unusable.
+
+Even though this shows that an AMD GPU is quite capable of running the Transformer package and loading at least one defined model. Even though I cannot reveal whether the model could be trained or otherwise used further. This fact in itself is surprising, since AMD itself describes the support status of the RX580 as only potentially possible, and Julia describes AMD GPU support as Level 3, which is the lowest level of support.
+
+However, I would discourage anyone from installing the ROCM stack on a productive system, as it is still unstable, and I would therefore recommend experimenting only in some sort of virtualized environment. Of course, this warning only applies to systems that rely on working video output.    
+
+This brings us to the GeForce 940MX. This graphics card unfortunately reaches its limits due to its memory size. 2GB of Vram, of which even a little bit less is usable, does not suffice for the used BERT model nor for SciBERT and thus results in an out of memory error of the Cuda runtime. Therefore, this hardware will not be considered further. 
+
+Thus only the google-colab environment remains. 
+
+This platform provides about 10 to 15 GB of VRAM. After the model has been moved to the graphics card, Julia shows an occupancy of just over 2 GB memory with the help of the memory indication of the Cuda driver. Here you can see why the 940MX was not able to load the model. The calculation of an epoch usually takes between 500 and 1000 seconds. These fluctuations could have several causes, but are most likely due to the google-colab environment and in particular the fact that several instances share the same graphics card. This is most likely the reason for the observed strong fluctuations from epoch to epoch. This assumption is particularly reasonable, since in the meantime almost every epoch lasted the same time, apart from relatively small fluctuations of less than 50 seconds. Interestingly, the entire video memory is used for caching, even though the model consumes just over 2 GB of memory and the entire original chemprot dataset is about 5MB in size when unpacked. Still, the runtime required in the google-cab environment is about as expected and significantly faster than training on a CPU. The CPU, which was a Xeon E3-1230 v3 with four cores, needed about as long for a single step as the graphics card in the google-colab eviremont needed for an epoch. A step here consisted of only one sentence and the corresponding label. 
 \section{Data preprocessing}
 \color{black}
 
@@ -42,14 +55,6 @@ dependency  tag and arc embedding of size 100 and biaffine matrix attention
 \section{Frozen embeddings}
 Vorherige experimente unter dem "festhalten" von BERT selbst und nur der anpassung der letzten ebene
 \color{black}
-
-\section{Influences of different platforms}
-In this section, we will take a brief look at the usability of different hardware platforms for creating transformer models and when training or testing them. More specifically, we will compare the google-colab environment with an Nvidia GPU and an AMD GPU. Due to the randomness of the assignment of hardware on the google-colab side, I cannot further define the GPU that was used on this platform. The Nvidia GPU used was a GeForce 940MX with about 2GB of VRAM, and the AMD GPU on the other side was an RX580 with about 8GB of VRAM.
-At this point I will briefly describe the extent to which AMD's ROCM stack is usable, because surprisingly I was able to define the model and make predictions with it in a newly generated state. Unfortunately, due to instability in the ROCM stack, the Linux kernel was no longer able to use the GPU after an update that must have broken some internal dependencies that the kernel and ROCM driver rely on, and thus the video output of the computer was also unusable. Even though this shows that an AMD GPU is indeed capable of running the Transformer package and loading at least a defined model. Even though I can't disclose whether the model could be trained or otherwise used further. This fact in itself is surprising, since AMD itself describes the support status of the RX580 as "may or may not work" and Julia describes AMD GPU support as Level 3, which is the lowest level of support. (verweis zu der aussage)[belege und verweis zu ROCM]\\
-However, I would advise anyone against installing the ROCM stack on a production system, as it is still unstable and I would therefore recommend experimenting only in some form of virtualized environment. Of course, this warning only applies to systems that rely on working video output.\\
-Due to the failure with the ROCM stack, only the MX940 and the google-colab environment will be considered in the following part. These two platforms will not only be compared, but also how they behave in the face of two different implementations written in Julia and Python.
-
-
 \section{Complications}
 In particular, the classic text classification was relatively unproblematic to implement. Nevertheless, there were some minor obstacles on the way to a finished reproduction of the original CLS. The order will follow that of the information flow in the model, starting with the input data and ending with the output.
 
