Extend Data Preprocessing and chemprot

--- a/bericht/sections/experiments.tex
+++ b/bericht/sections/experiments.tex
@@ -15,7 +15,6 @@
 In the following, we will take a closer look at how the tasks already described conceptually are implemented. Since some tasks use the same architecture for the model, more precisely the identical architecture for the last layer as the all other always stay the same. We will first examine the classification tasks and then the labeling tasks in more detail. Thus, the order in which the tasks will follow will remain the same as before.\\
 Nevertheless, both task types will use a dropout of 0.1, cross-entropy for loss, and Adam as the optimizer, all following the instructions from the SciBERT paper.
 
-\color{red}
 \section{Simple tests and examples}
 To ensure that these individual areas function correctly and that errors have not already sneaked in here. There are several outputs that show the functionality in a small scale and can ideally catch some errors. These outputs can be found in the Jupyter Notebook under Tests. In this section, the first record and the corresponding label of the training dataset are displayed first. The same is repeated for the test data set. After these examples, a dry run of the tokenizer follows. This is to assure us that the tokenize function, which puts the data into a form that the transformer can read, is working correctly. This is shown with a sentence that leads to the same result both by hand and by the function.  Next, the tokenization of special tokens is examined. This is to guarantee that the special tokens needed for the NER task are correctly recognized and translated. This is followed by some examples that test the functionality of the loss function and the embedding of the previously translated sentence. At this point, however, the verification of correctness becomes difficult, since the interpretation of the representation of the CLS token is no longer directly evaluable for humans. Although it can be shown that this process functions and presumably also operates correctly, this example no longer guarantees this.  This is followed by the tests that refer to the evaluation, in other words to the F1 score.Here we first consider whether the formats have been converted correctly so that the Metric package which is used for the calculation can read them and then we briefly compare whether the example delivers the expected F1 score. 
 
@@ -32,15 +31,26 @@ This brings us to the GeForce 940MX. This graphics card unfortunately reaches it
 
 Thus only the google-colab environment remains. 
 
-This platform provides about 10 to 15 GB of VRAM. After the model has been moved to the graphics card, Julia shows an occupancy of just over 2 GB memory with the help of the memory indication of the Cuda driver. Here you can see why the 940MX was not able to load the model. The calculation of an epoch usually takes between 500 and 1000 seconds. These fluctuations could have several causes, but are most likely due to the google-colab environment and in particular the fact that several instances share the same graphics card. This is most likely the reason for the observed strong fluctuations from epoch to epoch. This assumption is particularly reasonable, since in the meantime almost every epoch lasted the same time, apart from relatively small fluctuations of less than 50 seconds. Interestingly, the entire video memory is used for caching, even though the model consumes just over 2 GB of memory and the entire original chemprot dataset is about 5MB in size when unpacked. Still, the runtime required in the google-cab environment is about as expected and significantly faster than training on a CPU. The CPU, which was a Xeon E3-1230 v3 with four cores, needed about as long for a single step as the graphics card in the google-colab eviremont needed for an epoch. A step here consisted of only one sentence and the corresponding label. 
-\section{Data preprocessing}
-\color{black}
+This platform provides about 10 to 15 GB of VRAM. After the model has been moved to the graphics card, Julia shows an occupancy of just over 2 GB memory with the help of the memory indication of the Cuda driver. Here you can see why the 940MX was not able to load the model. The calculation of an epoch usually takes between 500 and 1000 seconds. These fluctuations could have several causes, but are most likely due to the google-colab environment and in particular the fact that several instances share the same graphics card. This is most likely the reason for the observed strong fluctuations from epoch to epoch. This assumption is particularly reasonable, since in the meantime almost every epoch lasted the same time, apart from relatively small fluctuations of less than 50 seconds. Interestingly, the entire video memory is used for caching, even though the model consumes just over 2 GB of memory and the entire original chemprot dataset is about 5MB in size when unpacked. Still, the runtime required in the google-cab environment is about as expected and significantly faster than training on a CPU. The CPU, which was a Xeon E3-1230 v3 with four cores, needed about as long for a single step as the graphics card in the google-colab eviremont needed for an epoch. A step here consisted of only one sentence and the corresponding label.
+ 
+\color{red}
+\subsection{Data preprocessing}
+DDue to the availability of the datasets used by the original authors, we will use their prepared datasets, which are already prepared in such a way that they can be more easily used for training and still differ only slightly from the original datasets. The datasets we will use will be retrieved directly from the SciBERT GitHub page and made available through the DataDeps package, which provides an easy way to retrieve data that may or may not be available locally. If not already stored locally, it is cached in the local Julia path and within Julia, the DataDeps package provides the appropriate paths to the data and retrieves it from the defined source as needed. In addition, a hash can also be defined to ensure that the provided data is identical to the expected data.\cite{White2019} 
 
-\section{Classification tasks}
-Both classification tasks use the same architectural structure. This means that the final BERT or SciBERT layer is followed by a dense or fully connected linear layer. This dense layer then acts as the linear classification layer described in the original work. 
-\subsection{Text Classification (CLS)}
-Classic sequence classification tasks or text classification tasks, as they are called in the original paper, can be implemented in Julia without any particular challenges. Especially since the data is already available in a format that mostly only needs to be loaded and the task is only a transformation from a text to a single label. Together with the architecture for classification tasks already described, this makes the implementation of this task very easy. We just need to combine Bert and the classification layer and provide this model with the text and the label in the correct formats. This means, on the one hand, adding the "[CLS]" and "[SEP]" tokens to the text after preparing the text with the tokenizer and wordpiece and, on the other hand, preparing the labels in a format that can be read by the model, which transforms them into a "OneHotMatrix" for "Flux", corresponding to a one out of k representation per sequence.
-\subsection{Relation Classification (REL)}
+In the following section, we will take a closer look at the original data and the individual changes that were made to use these data sets for the training process. 
+
+\subsubsection{Chemprot} 
+
+The Chemprot data is provided in a JSON line file format. More precisely, each line consists of a text and the corresponding label. A field for metadata is also provided, but is usually not used. In its original format, the chemprot corpus consists of a develop, test, and train set, where the develop, test, and train folders correspond to the files of the same name within the chemprot folder provided on SciBERT's GitHub page. The difference arises from the database-like structure in which the chemprot corpus is originally provided, as opposed to those subdivided sets of information where, for example, the text itself is in a different file than the positions and annotations. These subdivided information sets have been merged and are provided in a single file in the format mentioned earlier. \cite{Beltagy2019,Wang2016} 
+
+Since the data is already very close to the format that is necessary for the transformer, only small changes have to be made. These consist mainly of not changing the special tokens that are already included in the data by the tokenizer or wordpiece. Afterwards these preprocessed sentences should only be changed by using the vocabulary function. This takes place in the tokenize function, which first locates the special tokens and finds out which pair comes first. This is followed by splitting the sentence at the locations of the special tokens. Now these subsets are processed by the tokenizer and by wordpiece and then reassembled together with the corresponding special tokens to form a whole sentence. After that the numeric representation is generated by the vocabulary and the segment representation is generated together with the corresponding mask. The segments always get ones, because we only process single sentences with this function and the mask is created with the mask function from the Transformers.jl package. Now only the correct labels are missing. These are put into a 1 of k scheme using the onehot function from flux. For this function we need the correct label and an array with all existing labels. This array has already been defined based on all the labels found in the training data. With all this data we now have all the prerequisites to continue with the transformer. 
+
+%\section{Classification tasks}
+%Both classification tasks use the same architectural structure. This means that the final BERT or SciBERT layer is followed by a dense or fully connected linear layer. This dense layer then acts as the linear classification layer described in the original work. 
+%\subsection{Text Classification (CLS)}
+%Classic sequence classification tasks or text classification tasks, as they are called in the original paper, can be implemented in Julia without any particular challenges. Especially since the data is already available in a format that mostly only needs to be loaded and the task is only a transformation from a text to a single label. Together with the architecture for classification tasks already described, this makes the implementation of this task very easy. We just need to combine Bert and the classification layer and provide this model with the text and the label in the correct formats. This means, on the one hand, adding the "[CLS]" and "[SEP]" tokens to the text after preparing the text with the tokenizer and wordpiece and, on the other hand, preparing the labels in a format that can be read by the model, which transforms them into a "OneHotMatrix" for "Flux", corresponding to a one out of k representation per sequence.
+%\subsection{Relation Classification (REL)}
+\color{black}
 
 \section{Sequenz labeling tasks}
 \subsection{Named Entity Recognition (NER)}
